# itmo-sem-1-prog

./: CMakeLists.txt  README.md  lab1.c  lab10.1.c  lab10.2.c  lab11.c  lab11Rect.c  lab11Rect.h  lab12.c  lab13.c  lab14.c  lab14b.c  lab15.c  lab2.c  lab3.c  lab4.c  lab5.c  lab6.c  lab7.c  lab8.1.c  lab8.3.c  lab8.5.c  lab8.7.c  lab8.9.c  lab9.1.c  lab9.2.c
Working Directory/: data.arc  lifeKernel.cl
include/CL/: cl.h
lib56/: files.c  files.h  parseInt.c  parseInt.h  stringCopy.c  stringCopy.h  stringsCompare.c  stringsCompare.h
lib56/file/: bmp.c  bmp.h
